Création du theme echart4r selon préco akiani

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: echarts4rtheme
-Title: What the Package Does (One Line, Title Case)
+Title: Theme Akiani Magneto pour echarts4r
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Yohann",
+           family = "Mansiaux",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "yohann.mansiaux@bordeaux-metropole.fr",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    magrittr,
+    glue,
+    htmlwidgets
