--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export("%>%")
 export(create_echarts_theme)
 export(create_svg_path)
 export(format_horaire)
+export(format_horaire_from_hour_in_integer)
 export(format_horaire_popup)
 export(format_isoweek)
 export(format_nom_jour_numero_jour_long)
 export(format_nom_jour_numero_jour_short)
 export(format_nom_mois_annee_long)
 export(format_nom_mois_annee_short)
+importFrom(htmlwidgets,JS)
 importFrom(magrittr,"%>%")
